<resources>
    <string name="app_name">Proyecto1_Recuperacion</string>
    <string name="inicio_de_sesi_n">Inicio de Sesión</string>
    <string name="email">Email</string>
    <string name="logo_de_la_app">Logo de la app</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="contrase_a">Contraseña</string>
    <string name="imagen_de_logo">imagen de logo</string>
    <string name="te_damos_la_bienvenida">Te damos la bienvenida!</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="no_tienes_cuenta">¿No tienes una cuenta? Regístrate</string>
    <string name="ya_tienes_cuenta_inicia_sesi_n">¿Ya tienes cuenta? <b>Inicia Sesión</b></string>
    <string name="introduce_el_correo_electr_nico_y_te_enviaremos_instrucciones_para_restablecer_la_contrase_a">Introduce el correo electrónico y te enviaremos instrucciones para restablecer la contraseña.</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="establecer_constrase_a">Establecer Constraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo_el_dia">Todo el dia</string>
    <string name="fotoEvento">fotoEvento</string>
    <string name="desde_las">Desde las</string>
    <string name="hasta_las">Hasta las</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="foto_perfil">foto_perfil</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="g_nero">Género</string>
    <string name="crear_evento">Crear Evento</string>
    <string name="descripci_n">Descripción</string>
    <string name="crear_horario">Crear Horario</string>
</resources>