<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BeigeClaro_1"
    tools:context=".activitys.Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-43dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logoStandard"
                style="@style/imgStandardLogo"
                android:src="@mipmap/ic_disciplin_events"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tltResgister"
                style="@style/tltStandard"
                android:text="Regístrate"
                android:textSize="@dimen/size_title3"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoStandard" />

            <TextView
                android:id="@+id/subTltNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:layout_marginTop="@dimen/marginTop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tltResgister" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subTltNombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputNombre2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/subTltApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellidos"
                android:layout_marginTop="@dimen/marginTop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputNombre" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subTltApellido">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputApellido2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellidos" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/subTltEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:layout_marginTop="@dimen/marginTop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputApellido" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subTltEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/subTltGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g_nero"
                android:layout_marginTop="@dimen/marginTop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subTltGender">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputGender2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/g_nero" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/subTltPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contraseña"
                android:layout_marginTop="@dimen/marginTop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputGender" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subTltPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrase_a" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/subTltRepPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repetir_contrase_a"
                android:layout_marginTop="@dimen/marginTop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputRepPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subTltRepPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputRepPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repetir_contrase_a" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/check_term_cond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Acepto los Términos de Servicio y la Política de Privacidad"
                android:layout_marginTop="@dimen/marginTop"
                android:textSize="@dimen/size_text2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputRepPassword" />

            <Button
                android:id="@+id/btnRegister"
                style="@style/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Crear Cuenta"
                android:layout_marginTop="@dimen/marginTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/check_term_cond" />

            <TextView
                android:id="@+id/txtTienesCuenta"
                android:layout_width="160dp"
                android:layout_height="63dp"
                android:gravity="center"
                android:text="@string/ya_tienes_cuenta_inicia_sesi_n"
                android:textSize="@dimen/size_text1"
                android:layout_marginTop="@dimen/marginTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>