<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateEvent">

    <TextView
        android:id="@+id/tltCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/crear_evento"
        android:textSize="@dimen/size_title1"
        android:layout_marginTop="@dimen/mainMarginTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subTltNombre"
        style="@style/subTltStandard"
        android:text="@string/nombre"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tltCreate" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNombre"
        style="@style/textInputLayout"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/subTltNombre"
        app:layout_constraintTop_toBottomOf="@+id/subTltNombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputLayoutNombreContent"
            style="@style/textInputLayout"
            android:layout_width="match_parent"
            android:hint="@string/nombre" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/subTltDescripcion"
        style="@style/subTltStandard"
        android:text="@string/descripci_n"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutDescripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNombre" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDescripcion"
        style="@style/textInputLayout"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/subTltDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/subTltDescripcion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputLayoutDescripcionContent"
            style="@style/textInputLayout"
            android:layout_width="match_parent"
            android:hint="@string/descripci_n" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Crear"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDescripcion" />

    <Button
        android:id="@+id/btnCancelarr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCrear" />


</androidx.constraintlayout.widget.ConstraintLayout>